@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-28T00:45:03Z",
+  "timestamp" : "2022-05-28T16:13:14Z",
   "count_outdated" : 86,
   "uniques_outdated" : 20,
-  "count" : 89,
-  "uniques" : 22,
+  "count" : 100,
+  "uniques" : 23,
   "views" : [
     {
       "timestamp": "2022-05-24T00:00:00Z",
@@ -16,6 +16,13 @@
       "timestamp": "2022-05-27T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-28T00:00:00Z",
+      "count": 11,
+      "count_minmax": [ 11, 11 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
