@@ -1,6 +1,6 @@
 {
-  "count": 3,
-  "uniques": 2,
+  "count": 14,
+  "uniques": 3,
   "views": [
     {
       "timestamp": "2022-05-24T00:00:00Z",
@@ -10,6 +10,11 @@
     {
       "timestamp": "2022-05-27T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-28T00:00:00Z",
+      "count": 11,
       "uniques": 1
     }
   ]
