@@ -1,3 +1,10 @@
+2022-05-28T16:13:14Z:
+* notice: last 14d: unq all: 3 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 20 86 / 22 89
+* notice: next accum: outdated-unq outdated-all / unq all: 20 86 / 23 100
+* notice: prev exec diff / last date diff / accum: unq all: +1 +11 -0 -0 / +1 +11 -0 -0 / 1 11
+* notice: changed dates: [2022-05-28]
+
 2022-05-28T00:45:03Z:
 * notice: last 14d: unq all: 2 3
 * notice: prev accum: outdated-unq outdated-all / unq all: 20 86 / 21 88
